--- a/package.json
+++ b/package.json
@@ -10,6 +10,14 @@
   "license": "ISC",
   "dependencies": {
     "discord.js": "^11.3.2",
-    "eslint": "^4.18.2"
+    "discord.js-music-v11": "^1.3.4",
+    "encodeurl": "^1.0.2",
+    "eslint": "^4.18.2",
+    "fetch": "^1.1.0",
+    "ffmpeg-binaries": "^3.2.2-3",
+    "languagedetect": "^1.1.1",
+    "node-fetch": "^2.1.1",
+    "opusscript": "0.0.6",
+    "ytdl-core": "^0.20.2"
   }
 }
