--- a/config.json
+++ b/config.json
@@ -2,5 +2,7 @@
   "prefix": "!",
   "help_prefix": "ПАМАГИТЕ!",
   "token": "NDIyNDYxNjg0MzI2NTk2NjE1.DYcHtg.G5ZwdUszadNFKdck-sOYOxQpHrk",
-  "meaning_of_life": 42
+  "meaning_of_life": 42,
+  "default_hook_id": "420966945995620352",
+  "default_hook_token": "UhpPvEt_2M6AamJxxiy_EZY4vkh_UppNJNECgAthLD6PEjVmvv8W1Wyc89lPJtDySxRy"
 }
