--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "languagedetect": "^1.1.1",
     "node-fetch": "^2.1.1",
     "opusscript": "0.0.6",
+    "webhook-discord": "^2.0.6",
     "ytdl-core": "^0.20.2"
   }
 }
