--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "eslint": "^4.18.2",
     "fetch": "^1.1.0",
     "ffmpeg-binaries": "^3.2.2-3",
+    "google-images": "^2.1.0",
     "languagedetect": "^1.1.1",
     "node-fetch": "^2.1.1",
     "opusscript": "0.0.6",
