--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "fetch": "^1.1.0",
     "ffmpeg-binaries": "^3.2.2-3",
     "google-images": "^2.1.0",
+    "google-translate-api": "^2.3.0",
     "languagedetect": "^1.1.1",
     "node-fetch": "^2.1.1",
     "opusscript": "0.0.6",
